--- a/bower.json
+++ b/bower.json
@@ -1,24 +1,24 @@
 {
-  "name": "scrollgress",
-  "version": "1.0.0",
-  "homepage": "https://github.com/michael-lynch/scrollgress",
-  "authors": [
-    "Michael Lynch <mikethomaslynch@gmail.com>"
-  ],
-  "description": "A simple, lightweight jQuery plugin used to display a progress bar at the top of the page that fills up as the user scrolls.",
-  "main": "build/.min.js",
-  "keywords": [
-    "scrollgress",
-    "scroll",
-    "progress",
-    "feedback"
-  ],
-  "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ]
+	"name": "scrollgress",
+	"version": "1.0.0",
+	"homepage": "https://github.com/michael-lynch/scrollgress",
+	"authors": [
+		"Michael Lynch <mikethomaslynch@gmail.com>"
+	],
+	"description": "A simple, lightweight jQuery plugin used to display a progress bar at the top of the page that fills up as the user scrolls.",
+	"main": "build/scrollgress.min.js",
+	"keywords": [
+		"scrollgress",
+		"scroll",
+		"progress",
+		"feedback"
+	],
+	"license": "MIT",
+	"ignore": [
+		"**/.*",
+		"node_modules",
+		"bower_components",
+		"test",
+		"tests"
+	]
 }
