--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
 	"name": "scrollgress",
-	"version": "1.0.0",
+	"version": "2.0.0",
 	"homepage": "https://github.com/michael-lynch/scrollgress",
 	"authors": [
 		"Michael Lynch <mikethomaslynch@gmail.com>"
 	],
 	"description": "A simple, lightweight jQuery plugin used to display a progress bar at the top of the page that fills up as the user scrolls.",
-	"main": "build/scrollgress.min.js",
+	"main": "src/scrollgress.js",
 	"keywords": [
 		"scrollgress",
 		"scroll",
